[project]
name = "ekzexport"
version = "0.1.2"
description = "CLI and data exporter for the myEKZ customer portal."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Manuel Stocker", email = "mensi@mensi.ch" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "requests",
    "click",
    "beautifulsoup4",
    "rich",
    "platformdirs",
    "tzdata",
]

[project.urls]
Homepage = "https://github.com/mensi/ekzexport"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
ekzexport = "ekzexport.cli:main"

[project.optional-dependencies]
influx = ["influxdb-client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ekzexport"]
